add button bill provisional invoice

--- a/debian/odoo.conf
+++ b/debian/odoo.conf
@@ -1,8 +1,11 @@
 [options]
 ; This is the password that allows database operations:
-; admin_passwd = admin
-db_host = False
-db_port = False
-db_user = odoo
-db_password = False
+admin_passwd = admin
+db_host = localhost
+db_port = 5432
+db_user = hieuadmin
+db_password = 123456
 ;addons_path = /usr/lib/python3/dist-packages/odoo/addons
+
+addons_path = E:\OdooProject\odoo15\odoo-15.1\odoo-15.0\custom_addons, E:\OdooProject\odoo15\odoo-15.1\odoo-15.0\addons
+bin_path = E:\tools\wkhtmltopdf\bin
